generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__view__closed_element.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
FunctionCall(
    FunctionCall(
        Identifier(
            "$knot.plugin.get",
        ),
        [
            String(
                "view",
            ),
            String(
                "createElement",
            ),
            String(
                "1.0",
            ),
        ],
    ),
    [
        Identifier(
            "Foo",
        ),
        Object(
            [
                (
                    "bar",
                    Identifier(
                        "bar",
                    ),
                ),
                (
                    "fizz",
                    Null,
                ),
            ],
        ),
    ],
)
