generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__view__empty_fragment.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
FunctionCall(
    FunctionCall(
        Identifier(
            "$knot.plugin.get",
        ),
        [
            String(
                "view",
            ),
            String(
                "createFragment",
            ),
            String(
                "1.0",
            ),
        ],
    ),
    [],
)
